--- a/client/Pages/Home/Home.html
+++ b/client/Pages/Home/Home.html
@@ -1,4 +1,5 @@
 <template name="Home">
+	testing changed
     <h2>Different Web Components</h2>   
     <h4>&#x3C;mrp-table&#x3E;</h4>
     <p>This elements uses a 2D array to build an HTML table.  The table has many optional features including searching, sorting, CSV/excel/PDF downloading, paging, complex data, buttons etc.
