--- a/client/Pages/Home/Home.html
+++ b/client/Pages/Home/Home.html
@@ -39,11 +39,17 @@
 <template name="Home_TODO">
     <h3>TODO</h3>
     <ul>
-        <li>Add comments!!!</li>
-        <li>finish testing/fixing up</li>
         <li>Setup free online hosting</li>
         <li>Build Git Hub readme</li>
         <li>setup package manager and packages</li>
         <li>Upload web-components .org</li>
     </ul>
+</template>
+
+<template name="property">
+    <tr>
+        <td>{{name}}</td>
+        <td>{{type}}</td>
+        <td>{{description}}</td>
+    </tr>
 </template>
